common: hmacsha512 for radosgw

swift tempurl (and formpost) now suport sha256 and sha512.
hmacsha256 was there, adding hmacsha512 to round out the collection.

Fixes: https://tracker.ceph.com/issues/56564
Signed-off-by: Marcus Watts <mwatts@redhat.com>